# SR_Project_H414

./: README.md  clean_data.py  create_data_plot.py  create_output_plot.py  create_output_plot_loyalty.py  create_simple_plot.py  data_informations.py  data_informations_loyalty.py  output.csv  predator.lua  predator_temp.lua  predatorprey.argos  prey.lua  run_experiences.sh  run_tests.sh  run_tests_loyalty.sh  stats.csv  stats_loyalty.csv
multiple_results/: best_settings.tkt  experiment_output_15_12_110_2.txt  experiment_output_15_12_110_30.txt  experiment_output_15_12_110_30_test.txt  experiment_output_15_12_110_30_test_256.txt  experiment_output_15_12_110_30_test_300.txt  experiment_output_20_10_100_20.txt  experiment_output_25_10_100_25.txt  experiment_output_35_25_100_03_final.txt  experiment_output_35_25_100_03_final_1.txt  experiment_output_35_25_100_03_final_100.txt  experiment_output_35_25_100_03_final_1000.txt  experiment_output_35_25_100_03_final_200.txt  experiment_output_35_25_100_03_final_50.txt  experiment_output_35_25_100_03_final_5000.txt  experiment_output_final.txt  experiment_output_final_0_27_100_03.txt  experiment_output_final_10_25_100_03.txt  experiment_output_final_15_10_110_03.txt  experiment_output_final_15_12_110_0.txt  experiment_output_final_15_12_110_0125.txt  experiment_output_final_15_12_110_015.txt  experiment_output_final_15_12_110_02.txt  experiment_output_final_15_12_110_025.txt  experiment_output_final_15_12_110_0275.txt  experiment_output_final_15_12_110_03.txt  experiment_output_final_15_12_110_0325.txt  (+41 more)
src/: CMakeLists.txt
(+2751 files in other folders)
